fixed animation hitch when switching back from tab; added temp solution for notes entries on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1017,6 +1017,7 @@ main {
     word-wrap: break-word; /* Breaks long words */
     /* align-items: center; */
     box-sizing: border-box;
+    rows: 1;
 }
 
 
